@@ -1,6 +1,5 @@
-# $NetBSD: Makefile,v 1.10 2019/07/20 22:46:54 wiz Exp $
+# $NetBSD: Makefile,v 1.11 2019/08/01 01:03:17 brook Exp $
 
-PKGREVISION=	2
 CATEGORIES=	www R
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -9,9 +8,10 @@ COMMENT=	Modern and flexible web client for R
 LICENSE=	mit
 
 R_PKGNAME=	curl
-R_PKGVER=	3.2
+R_PKGVER=	4.0
 
-BUILDLINK_API_DEPENDS.R+=	R>=3.0.0
+USE_LANGUAGES=	c
+
 .include "../../math/R/Makefile.extension"
 .include "../../www/curl/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
