@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.3 2018/12/21 13:04:20 wen Exp $
+$NetBSD: distinfo,v 1.4 2019/08/01 01:03:17 brook Exp $
 
-SHA1 (R/curl_3.2.tar.gz) = 5be23025aa069e359d1c8df4d4cda21387f0c651
-RMD160 (R/curl_3.2.tar.gz) = 9847aa5ed8d5ce3b074f6430be78c3173bb92719
-SHA512 (R/curl_3.2.tar.gz) = 48310b5134ef59aaba0012b7b5e307e01249527e5e9ef986b366907ad6d13184beb81ece4185bd4bebe7d5a027a9069c345033188e65dd06dd21e06b260906d3
-Size (R/curl_3.2.tar.gz) = 367047 bytes
+SHA1 (R/curl_4.0.tar.gz) = 80667d270d99c8b497119fe3c294b868c89c17f5
+RMD160 (R/curl_4.0.tar.gz) = 2f20818bf9cc50d4a918ebb13b8c07c2be4ffe18
+SHA512 (R/curl_4.0.tar.gz) = c35d96727d8bc2b4d41e651edc337f63a44fd3c56dab09abc90ef7cf63b65c11e74fb8598d1a08cc1ce6671c6e75babddebbada7e2099929f306dff50c7a2c84
+Size (R/curl_4.0.tar.gz) = 379180 bytes
